# bastionlab

./: .env.vars  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  Dockerfile  LICENSE  README.md  install_pre_commit_hook.sh  mkdocs.yml
bastionai/server/bastionai_app/: Cargo.toml
bastionai/server/bastionai_app/src/: main.rs  telemetry.rs
bastionai/server/bastionai_common/: Cargo.toml
bastionai/server/bastionai_common/src/: lib.rs
client/: Makefile  README.md  client.py  data_owner  data_owner.pub  dummy.py  mypy.ini  private_module.py  pyproject.toml  remote_torch_pb2.py  remote_torch_pb2_grpc.py  requirements.in  requirements.txt  setup.cfg  setup.py  utils.py
client/attestation_C/: lib.cpp  lib.h
client/bastionai/: __init__.py  client.py  default_license.py  errors.py  keys.py  learner.py  license.py  optimizer_config.py  utils.py
client/bastionai/pb/: __init__.py  remote_torch_pb2.py  remote_torch_pb2_grpc.py
client/bastionai/psg/: convert.py  nn.py
client/bastionai/utils/: errors.py  utils.py
client/examples/: distilbert_example_notebook.ipynb
client/old/: dummy.py  private_module.py  psg.nn.py
client/pb/: remote_torch_pb2.py  remote_torch_pb2_grpc.py
client/protos/: attestation.proto  licensing.proto  remote_torch.proto
client/psg/: nn.py
client/psg_benchmark/: benchmark_psg_methods.py
client/scripts/: generate_protos.sh
client/src/bastionai/: __init__.py  client.py  utils.py
client/src/bastionai/pb/: remote_torch_pb2_grpc.py
client/src/bastionai/psg/: convert.py  nn.py
client/src/bastionlab/: __init__.py  _converter.py  _utils.py  client.py  config.py  converter.py  errors.py  keys.py  license.py  policy.py  remote_polars.py  trainers.py  utils.py  version.py
client/src/bastionlab/internals/: client.py  errors.py  keys.py
client/src/bastionlab/internals/polars/: client.py  policy.py  remote_polars.py  utils.py
client/src/bastionlab/internals/torch/: client.py  learner.py  optimizer_config.py  remote_torch.py  utils.py
client/src/bastionlab/linfa/: __init__.py  client.py  linfa.py  metrics.py  models.py  remote_linfa.py  trainers.py
client/src/bastionlab/polars/: __init__.py  _utils.py  client.py  frame.py  policy.py  remote_polars.py  utils.py
client/src/bastionlab/tokenizers/: __init__.py  client.py  remote_tokenizers.py
client/src/bastionlab/torch/: __init__.py  _utils.py  client.py  data.py  learner.py  optimizer.py  optimizer_config.py  remote_torch.py  utils.py
client/src/bastionlab/torch/psg/: __init__.py  convert.py  nn.py
client/tests/: attention_masks.pt  benchmark_psg_methods.py  bert.py  client-test.py  functorch_test.py  labels.pt  lreg.py  pb  private_lreg.py  private_module.py  psg  test_client.py  test_license.py  test_utils.py  token_id.pt
client/tests/psg_benchmark/: opacus_utils.py
client/tests/torch/: requirements.txt  test_client.py  test_utils.py
server/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.gpu.sev  Makefile  build.rs  build.sh
server/bastionai_app/: Cargo.toml  build.rs  logo.txt
server/bastionai_app/src/: access_control.rs  data_store.rs  learning.rs  lib.rs  main.rs  serialization.rs  storage.rs  telemetry.rs  utils.rs
server/bastionai_common/: Cargo.toml
server/bastionai_common/src/: auth.rs  jwt_key.pem  lib.rs
server/bastionai_learning/: Cargo.toml
server/bastionai_learning/src/: data.rs  lib.rs  procedures.rs  serialization.rs
server/bastionai_learning/src/data/: dataset.rs  privacy_guard.rs
server/bastionai_learning/src/nn/: mod.rs  module.rs  parameters.rs
server/bastionai_learning/src/optim/: adam.rs  mod.rs  optimizer.rs  sgd.rs
server/bastionlab_common/: Cargo.toml  build.rs
server/bastionlab_common/src/: array_store.rs  auth.rs  common_conversions.rs  config.rs  lib.rs  prelude.rs  session.rs  telemetry.rs  tracking.rs  utils.rs
server/bastionlab_conversion/: Cargo.toml  build.rs
server/bastionlab_conversion/src/: converter.rs  lib.rs
server/bastionlab_learning/: Cargo.toml
server/bastionlab_learning/src/: procedures.rs  serialization.rs
server/bastionlab_learning/src/data/: dataset.rs  mod.rs  privacy_guard.rs
server/bastionlab_learning/src/nn/: module.rs  parameters.rs
server/bastionlab_linfa/: Cargo.toml  build.rs
server/bastionlab_linfa/src/: algorithms.rs  lib.rs  operations.rs  trainer.rs  trainers.rs  utils.rs
server/bastionlab_linfa/src/algorithms/: mod.rs
server/bastionlab_plan/: Cargo.toml
server/bastionlab_plan/src/: cache.rs  composite_plan.rs  differential_privacy.rs  errors.rs  init.rs  lib.rs  utils.rs  visit.rs
server/bastionlab_plan/src/aggregation/: expr_pass.rs  factor.rs  mod.rs  plan_pass.rs
server/bastionlab_polars/: Cargo.toml  build.rs
server/bastionlab_polars/src/: access_control.rs  cache.rs  composite_plan.rs  convert.rs  differential_privacy.rs  errors.rs  init.rs  lib.rs  serialization.rs  state_tree.rs  udf.rs  utils.rs  visit.rs  visitable.rs
server/bastionlab_torch/: Cargo.toml  build.rs
server/bastionlab_torch/src/: learning.rs  lib.rs  serialization.rs  storage.rs  utils.rs
server/common/: Cargo.toml
server/common/src/: authentication.rs  composite_plan.rs  lib.rs
server/docker/: build.dockerfile
server/executable/: Cargo.toml
server/executable/src/: main.rs
server/keys/owners/: data_owner.pem
server/keys/users/: data_scientist.pem
server/private_learning/src/: lib.rs
server/protos/: remote_torch.proto
server/python-wheel/: README.md  create_wheel.sh  setup.py
server/python-wheel/src/bastionlab_server/: __init__.py  server.py
server/src/: access.rs  access_control.rs  attestation.rs  attestation_lib.rs  authentication.rs  composite_plan.rs  config.rs  lib.rs  main.rs  operations.rs  serialization.rs  storage.rs  telemetry.rs  trainer.rs  utils.rs  visitable.rs
server/src/bastionlab_linfa/: mod.rs  operations.rs  trainer.rs
server/src/bastionlab_linfa/algorithms/: mod.rs
server/tools/: config.toml  create_tls_config.sh
server/wheel-python/: Cargo.toml  README.md  pyproject.toml
server/wheel-python/src/: lib.rs
(+220 files in other folders)
