[metadata]
name = bastionai
version = 0.1.0
author = Kwabena Amponsem, Lucas Bourtoule
author_email = kwabena.amponsem@mithrilsecurity.io, lucas.bourtoule@mithrilsecurity.io
description = Bastion AI Python Client
long_description = file: README.md
long_description_content_type = text/markdown
keywords = ai, machine-learning, privacy
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: Apache License
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    grpcio==1.47.0
    grpcio-tools==1.47.0
    protobuf==3.20.1
    six==1.16.0
    torch==1.12.0
    numpy==1.23.1
    typing-extensions==4.3.0
    tqdm==4.64.0

package_dir=
    =src

[options.packages.find]
where=src
