[package]
name = "bastionai_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow  = "1.0.61"
http = "0.2.8"
serde = {version = "1.0.143", features = ["derive"]}
tokio = {version = "1.19.2", features = ["rt"]}
tokio-stream = {version = "0.1", features = ["net"]}
tonic = "0.5.2"