[package]
name = "bastionlab_conversion"
version = "0.3.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.5.2", features = ["tls", "transport"] }
prost = { version = "0.8", default-features = false, features = [
    "prost-derive",
] }

bastionlab_polars = { path = "../bastionlab_polars" }
bastionlab_torch = { path = "../bastionlab_torch" }
bastionlab_common = { path = "../bastionlab_common" }
bastionlab_learning = { path = "../bastionlab_learning" }
ring = "0.16.20"
polars = "0.25.1"
ndarray ="0.15.6"
tokenizers = "0.13.2"
tch = "0.10.1"

[dependencies.uuid]
version = "1.1.2"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs,
  "serde",
]

[build-dependencies]
tonic-build = "0.5"