[package]
name = "bastionlab_plan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
thiserror = "1.0"
log = "0.4.17"
env_logger = { version = "0.9.0", optional = true } # for tests only
tokio-stream = "0.1"
serde = "1.0.147"
serde_derive = "1.0.147"
tch = "0.10.1"
base64 = "0.13.1"
bastionlab_common = { path = "../bastionlab_common" }

[features]
test = ["env_logger"]

# serde = "1.0"
# serde_derive = "1.0"
# serde_json = "1.0"
[dependencies.polars]
version = "0.25.1"
default-features = false
features = [
  "dynamic_groupby",
  "zip_with",
  "lazy",
  "strings",
  "temporal",
  "random",
  "fmt",
  "performant",
  "dtype-full",
  "rows",
  "private",
  "round_series",
  "is_first",
  "dot_product",
  "concat_str",
  "row_hash",
  "reinterpret",
  "mode",
  "cum_agg",
  "rolling_window",
  "interpolate",
  "rank",
  "diff",
  "moment",
  "arange",
  "true_div",
  "dtype-categorical",
  "diagonal_concat",
  "horizontal_concat",
  "abs",
  "ewma",
  "dot_diagram",
  "dataframe_arithmetic",
  "string_encoding",
  "product",
  "ndarray",
  "unique_counts",
  "log",
  "asof_join",
  "serde-lazy",
  "partition_by",
  "semi_anti_join",
  "list_eval",
  "cumulative_eval",
  "list_to_struct",
  "to_dummies",
  "string_justify",
  "arg_where",
  "date_offset",
]
