[package]
name = "bastionlab"
version = "0.3.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.9"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread", "net" ] }
bastionlab-common = { path = "../common/" }
tonic = { version = "0.5.2", features = ["tls", "transport"] }