[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "bastionlab-server"
requires-python = ">=3.6.9"
authors = ["Mithril Security <contact@mithrilsecurity.io>"]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
readme = "README.md"