[package]
name = "bastionai_app"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "0.5.2", features = ["tls"] }
prost = { version = "0.8", default-features = false, features = [
    "prost-derive",
] }
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
futures-core = "0.3.21"
futures = "0.3.21"
tch = "0.8.0"
tokio-stream = "0.1"
# http = "0.2.8"
anyhow = "1.0.58"
ring = "0.16.20"
bastionai_learning = { path = "../bastionai_learning" }
bastionai_common = { path = "../bastionai_common" }
rand = "0.8.5"
toml = "0.5.9"
log = "0.4.17"
env_logger = "0.9.0"
serde = "1.0.130"
serde_derive = "1.0.68"
serde_json = "1.0.68"
reqwest = {version = "=0.11.4", default-features = false, features = ["json", "rustls-tls-webpki-roots"]}
once_cell = "1.13.1"
hex = "0.4.3"
whoami = "1.2.1"


[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs,
    "serde",
]

[build-dependencies]
tonic-build = "0.5"
