[package]
name = "bastionai_common"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow  = "1.0.61"
http = "0.2.8"
serde = "1.0.130"
serde_derive = "1.0.68"
serde_json = "1.0.68"
tokio = {version = "1.19.2", features = ["rt"]}
tokio-stream = {version = "0.1", features = ["net"]}
tonic = "0.5.2"
jsonwebtoken = "8"
once_cell = "1.13.1"
log = "0.4.17"
